Factory Methods, DataProviders

--- a/test-output/old/Factory Testing/classes.html
+++ b/test-output/old/Factory Testing/classes.html
@@ -4,26 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>FactoryMethodTesting.DependsFactTesting</td>
+<td>FactoryMethodTesting.FacTestParameter</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>depFactMethod1</td>
+<td>ArgPassMethod1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>depFactMethod1</td>
+<td>ArgPassMethod1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>depFactMethod2</td>
+<td>ArgPassMethod2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>depFactMethod2</td>
+<td>ArgPassMethod2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
